--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<h3>App sandbox</h3>
+<p>Live at <a href="https://episphere.gihutb.io/app" target="_blank">episphere.gihutb.io/app</a>.</p>
 
+<div id='jonasApp'> - <a href="./jonas" target="_blank">/ jonas</a></div>
+<div id='lorenaApp'> - <a href="./lorena" target="_blank">/ lorena</a></div>
+<div id='jacobApp'> - <a href="./jacob" target="_blank">/ jacob</a></div>
+<div>... add your own </div>
 
-<div id='jonasApp'><a href="episphere.github.io/app/jonas" target="_blank">jonas</a></div>
-
-/lorena
-/jacob
+<link href="https://episphere.github.io/gps/gps.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
