--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<h3>App sandbox</h3>
+<hr>
+<h2>App sandbox</h3>
+<hr>
 <p>Live at <a href="https://episphere.gihutb.io/app" target="_blank">episphere.gihutb.io/app</a>.</p>
 
 <div id='jonasApp'> - <a href="./jonas" target="_blank">/ jonas</a></div>
 <div id='lorenaApp'> - <a href="./lorena" target="_blank">/ lorena</a></div>
 <div id='jacobApp'> - <a href="./jacob" target="_blank">/ jacob</a></div>
-<div>... add your own </div>
+<div> ... add your own </div>
 
-<link href="https://episphere.github.io/gps/gps.css" rel="stylesheet">
+<link href="app.css" rel="stylesheet">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
