--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <hr>
 <h2>App sandbox</h3>
 <hr>
-<p>Live at <a href="https://episphere.gihutb.io/app" target="_blank">episphere.gihutb.io/app</a>.</p>
+<p>Live at <a href="https://episphere.github.io/app">episphere.github.io/app</a>.
+    <br> - [<a href="https://github.com/episphere/app" target="_blank">code</a>] [<a href="https://github.com/episphere/app/discussions" target="_blank">discussions</a>]
+</p>
 
-<div id='jonasApp'> - <a href="./jonas" target="_blank">/ jonas</a></div>
-<div id='lorenaApp'> - <a href="./lorena" target="_blank">/ lorena</a></div>
-<div id='jacobApp'> - <a href="./jacob" target="_blank">/ jacob</a></div>
+<div id='jonasApp'> - <a href="./jonas">/ jonas</a></div>
+<div id='lorenaApp'> - <a href="./lorena">/ lorena</a></div>
+<div id='jacobApp'> - <a href="./jacob">/ jacob</a></div>
 <div> ... add your own </div>
 
 <link href="app.css" rel="stylesheet">
