--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <hr>
-<h2>App sandbox</h3>
-<hr>
+<h2>App sandbox <sup style="font-size:medium;font-weight:normal">[<a href="https://github.com/episphere/app" target="_blank">code</a>] [<a href="https://github.com/episphere/app/discussions" target="_blank">discussions</a>]</sup></h3>
 <p>Live at <a href="https://episphere.github.io/app">episphere.github.io/app</a>.
-    <br> - [<a href="https://github.com/episphere/app" target="_blank">code</a>] [<a href="https://github.com/episphere/app/discussions" target="_blank">discussions</a>]
+    
 </p>
+<hr>
+<h3>Apps:</h3>
 
 <div id='jonasApp'> - <a href="./jonas">/ jonas</a></div>
 <div id='lorenaApp'> - <a href="./lorena">/ lorena</a></div>
