--- a/jonas/index.html
+++ b/jonas/index.html
@@ -9,7 +9,11 @@ to have the UI elements defined by functions
 
 
 <!-- UI -->
-<hr><h3><a href="..">root</a> / Jonas App</h3><hr>
+<hr><h3>
+    <a href="..">root</a>
+    <br> / jonas / <a href="calculator">calculator</a>
+    <br> / jonas / <a href="prs">prs</a>
+</h3><hr>
 <input id="x" size=10 value=9><span id="operator"> x 2 </span>= <span id="res">18</span>
 
 <!-- loading code -->
