--- a/jonas/calculator/index.html
+++ b/jonas/calculator/index.html
@@ -1,4 +1,7 @@
-calculator
+<hr><h3>
+.. <a href=".."> / jonas / </a> calculator
+</h3><hr>
+
 <!-- setting generic styling, borrowed from the parent page -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../../app.css" rel="stylesheet">
