--- a/jonas/calculator/index.html
+++ b/jonas/calculator/index.html
@@ -5,4 +5,8 @@
 <!-- setting generic styling, borrowed from the parent page -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../../app.css" rel="stylesheet">
+<script src="calculator.js"></script>
+<script>
+    calculator()
+</script>
 
