--- a/jonas/calculator/index.html
+++ b/jonas/calculator/index.html
@@ -5,8 +5,17 @@
 <!-- setting generic styling, borrowed from the parent page -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="../../app.css" rel="stylesheet">
+
+<!-- script tag loading --->
 <script src="calculator.js"></script>
 <script>
-    calculator()
+    calculator();
 </script>
 
+<!-- ES6 module import -->
+
+<!--
+<script>
+    import('episphere.github/app/jonas/calculator/export.js').then(mod=>mod.calculator())
+</script>
+-->
